# connectedhomeip

.github/: boring-cyborg.yml
examples/bridge-app/bridge-common/: bridge-app.zap
examples/bridge-app/linux/: main.cpp
examples/lock-app/renesas/: BUILD.gn  args.gni
examples/lock-app/renesas/include/: CHIPProjectConfig.h
scripts/setup/: constraints.txt  requirements.all.txt
src/: BUILD.gn
src/app/server/: Server.cpp
src/app/util/: attribute-storage.cpp
src/controller/: EmptyDataModelHandler.cpp
src/credentials/: BUILD.gn
src/include/platform/internal/: GenericConfigurationManagerImpl.ipp
src/inet/: InetInterface.cpp
src/lib/address_resolve/: BUILD.gn
src/platform/: BUILD.gn  device.gni
src/platform/FreeRTOS/: SystemTimeSupport.cpp
src/platform/renesas/: BUILD.gn  CHIPPlatformConfig.h  ConfigurationInformationProvider.h  ConfigurationManagerImpl.cpp  ConfigurationManagerImpl.h  DiagnosticDataProviderImpl.cpp  DiagnosticDataProviderImpl.h  KeyValueStoreManagerImpl.cpp  KeyValueStoreManagerImpl.h  NetworkCommissioningDriver.cpp  NetworkCommissioningDriver.h  RenesasConfig.cpp  RenesasConfig.h  SystemPlatformConfig.h  SystemTimeSupport.cpp  args.gni
src/system/: SystemStats.h
