# Copyright (c) 2021 Project CHIP Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build_overrides/build.gni")
import("//build_overrides/chip.gni")
import("//build_overrides/renesas_sdk.gni")
import("//build_overrides/pigweed.gni")

import("${chip_root}/examples/platform/renesas/args.gni")

custom_toolchain = "${build_root}/toolchain/arm_gcc"

arm_platform_config = "${renesas_sdk_build_root}/renesas_arm.gni"

chip_external_mbedtls = true
chip_crypto = "mbedtls"

chip_device_platform = "renesas"
chip_mdns = "minimal"

chip_config_network_layer_ble = false
chip_enable_ble = false

chip_persist_subscriptions = true

chip_with_lwip = true
lwip_platform = "external"
lwip_debug = false

no_exceptions = true
